--- a/src/Component/NavBar/NavBar.css
+++ b/src/Component/NavBar/NavBar.css
@@ -200,11 +200,12 @@
 
 @media screen and (min-width: 200px) and (max-width: 500px) {
   .Nav-First-logo {
-    width: 60px;
+    width: 80px;
   }
 
   .Nav-Second-logo {
-    width: 70px;
+    /* width: 70px; */
+    display: none;
   }
 
   .custom-card-drop {
